--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Getting Started with Types in Typescript</title>
-  </head>
 
-  <body>
-    <script src="./dist/26-generic-Function-inference.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Getting Started with Types in Typescript</title>
+</head>
+
+<body>
+  <script src="./dist/30-type-guards.js"></script>
+</body>
+
 </html>
