--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Getting Started with Types in Typescript</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Getting Started with Types in Typescript</title>
-</head>
-
-<body>
-  <script src="./dist/30-type-guards.js"></script>
-</body>
-
+  <body>
+    <script src="./dist/31-type-weiding.js"></script>
+  </body>
 </html>
