--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
 
   <body>
-    <script src="./dist/31-type-weiding.js"></script>
+    <script src="./dist/43-nullish-coalesing-operator.js"></script>
   </body>
 </html>
